# rs-triangulation

./: .gitignore  Cargo.toml  README.md  assignment1.md  index.html  make.sh
src/: delauney.rs  edge.rs  index.html  index.js  lib.rs  rs_triangulation.wasm  triangle.rs  vertex.rs
